# pyEmp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bind.cpp  compile_pyEmp.sh  pyEmp.h  recompile_pyEmp.sh  sha256-alice.py  sha256-bob.py
src/: CMakeLists.txt  bind.cpp  plaintext_sha256.h  pyEmp.h  utils.h
test/: ectf_alice.py  ectf_bob.py  naive-aes-gcm-2pc-alice.py  naive-aes-gcm-2pc-bob.py  naive-aes-gcm-dec-2pc-alice.py  naive-aes-gcm-dec-2pc-bob.py  predicate-aes-gcm-2pc-alice.py  predicate-aes-gcm-2pc-bob.py  sha256-alice.py  sha256-bob.py  tls-prf-320_alice.py  tls-prf-320_bob.py  tls-prf-384_alice.py  tls-prf-384_bob.py  tls-prf-96-cf_alice.py  tls-prf-96-cf_bob.py  tls-prf-96-sf_alice.py  tls-prf-96-sf_bob.py
